# DataStreamingTesi

./: .gitignore  CMakeLists.txt  README.md  config.yaml  configure.sh  docker-compose.yml  main.cpp  plot_runs.py  run_tests.sh  start
common/: config.cpp  logger.cpp  metrics.cpp  scaling.cpp  threadPool.cpp  utils.cpp
dati_grafici_tesi/dati_run_backpressure/: config.yaml
dati_grafici_tesi/dati_run_normale/: config.yaml
dati_grafici_tesi/dati_run_normale/csv/: run_standard_20260626_193205.csv  run_standard_20260626_193348.csv  run_standard_20260626_193531.csv
docker/config/: prometheus.yml
docker/config/grafana/dashboards/: tesi.json
include/: config.hpp  dataTypes.hpp  logger.hpp  metrics.hpp  pipeProcesses.hpp  scaling.hpp  threadPool.hpp  utils.hpp
sender/: CMakeLists.txt  sender.cpp
sink/: CMakeLists.txt  sink.cpp
src/: main.cpp  threadPool.cpp
tests/: CMakeLists.txt  threadpool_test.cpp
workerA/: CMakeLists.txt  workerA.cpp
workerB/: CMakeLists.txt  workerB.cpp
